--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
         <div class="header-content container">
           <h1>Teamwork Makes The Dream Work.</h1>
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit vero
-            eligendi nam molestias nemo.
+            tennis makes child fit and healthy. its a passionate game for humans. dont forget to visit our site that get you in touch of us.
           </p>
           <a href="#">Learn More</a>
         </div>
@@ -75,12 +74,12 @@
           </div>
         </div>
       </section>
-      <section class="Gallery" id="gallery">
+      <section class="Gallery" >
         <div class="head">
-            <h1>Our Philosophy</h1>
-        </div>
+          <h1>Our Philosophy</h1>
+      </div>
         <ul class="gallery container">
-          <li>
+          <li id="gallery">
             <img src="./resourses/gallery-img-1.jpg" alt="" />
           </li>
           <li>
@@ -114,7 +113,7 @@
         <div class="container">
           <div class="row">
             <div class="footer-col">
-              <h4>company</h4>
+              <h4>NightHurl</h4>
               <ul>
                 <li><a href="#">about us</a></li>
                 <li><a href="#">our services</a></li>
